--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
         <button onclick="submitRequest()">Submit</button>
         <button id="downloadBtn" style="display: none;" onclick="downloadJSON()">Download JSON</button>
     </div>
+    <h3 id="status_line">...</h3>
 
     <script src="/static/script.js"></script>
 </body>
